styles.css
body {
	background-color:#1A1A1A;
	color: #FFF;
	font-size:14px;
	font-family: Tahoma, serif;
	text-align:center;
  padding: 0.5em 3em;
}

a {
    text-decoration: none;
    color: #FFF;
}
h1{
	font-size:60px;
}
h2{
	font-size:26px;
}
h3{
	font-size:26px;
}
h4{
	font-size:20px;
}
h5{
	font-size:16px;
}
h6{
	font-size:14px;
}
ol{
	list-style:none;
	padding:0;
}
nav {
	display:flex;
	flex-direction:row;
	align-items: center;
}
nav .site-title{
	width:30%;
	text-align:left;
	line-height:0;
}
@media only screen and (max-width: 717px) {
  nav .site-title {
    line-height:1;
  }
  nav .nav-menu{
	display:flex;
	flex-direction:column;
  }
}
nav .site-title p{
	color:#6377EE;
	font-weight:600;
}
nav .nav-menu{
	width:70%;
	list-style: none;  
	float:right;
	text-align:right;
	border: solid 1px #EAEAF3;
	border-radius: 10px;
	background:rgba(255, 255, 255, 0.05);
	padding: 18px;
}
nav .nav-menu a{
	padding: 0 30px;
	text-transform:uppercase;
	font-weight:900;
	color:#646464;
	transition:ease .2s;
}
nav .nav-menu a:hover, nav .nav-menu a:active{
	color:#6CEFEF;
}
nav .nav-menu a:last-child{
	background-color:#6377EE;
  color:#FFF;
  padding: 10px 20px;
  border-radius:10px;
}

main > ol.portfolio li > p {
    font-size:0.8em;
}
main > ol li div {
    font-size:1em;
}
main ol li.figures {
    text-align:center;
}
main ol li.figures figure {
    display:inline-block;
    width:45%;
    background:#fff;
    padding:2em 0;
    margin:0;
}
main ol li.figures figure img {
    width:100%;
}
li.citations {
    font-size:0.8em;
}

main ol.portfolio div.chartJs {
    display:inline-block;
    width:30%;
    text-align:center;
}
main ol.portfolio canvas + p,
main ol.portfolio table + p
{
    color:#888;
}
main ol.portfolio pre {
    text-align:left;
}
main ol.portfolio pre code {
    display:block;
    background:#dfdfdf;
    border:1px solid #cfcfcf;
    padding:0.5em 1em;
    overflow:scroll;
    font-size:0.8em;
    margin:3em 2em;
}
table {
    width:100%;
    border:1px solid #ddd;
    border-spacing:0;
}
table caption {
    background:#ccc;
    padding:0.25em 0;
}
table tr {
}
table tr td:first-child {
    text-align:center;
    width:20%;
}
table td, table th  {
    text-align:center;
    border:1px solid #ddd;
}
img.weather-icon {
    max-height:1.5em;
}


main ol.project div.vega-container {
    text-align:center;
}
main ol.project div.vega-canvas + p,
main ol.project table + p
{
    color:#888;
}
main ol.project pre {
    display:block;
    width:100%;
    text-align:left;
}
main ol.project pre code {
    display:block;
    background:#222;
    border:1px solid #cfcfcf;
    padding:0.5em 1em;
    overflow:scroll;
    font-size:0.8em;
    margin:3em 2em;
    white-space: pre;
}

